tests/semantics/invalid/bad_id_usage.s23
int a = 0;
int b[10];
int c();

code a;
code b;
code c {
    b = 0;
    c = 0;

    a[0] = 0;
    c[0] = 0;
}